----------------------------------------------------------------------------------------------------------------------
Version: 0.7.1
Date: soon
    Fixes:
        - Display spent fuel items in the production table and link summaries.
        - Fix error when switching items in NEIE with middle-click
----------------------------------------------------------------------------------------------------------------------
Version: 0.7.0
Date: May 25th 2024
    Features:
        - Add the option to specify a number of belts of production, and to specify per-second/minute/hour
          production regardless of the current display setting.
        - When searching in the page list, allow searching in page contents as well as in page names.
        - Allow the user to select whether catalysts should be considered produced and consumed by the recipes that
          use them. (e.g. Does coal liquefaction consume heavy oil?)
    Changes:
        - Add a help message and proper handling for command line arguments
        - Removed default pollution cost from calculation. Added a setting to customize pollution cost.
        - Add fuel consumption recipe for products
        - Fix list displays below search boxes. If necessary, they now scroll up until items are visible.
        - Fix the milestones display and the milestones editor displaying different milestones.
        - Fix the NEI Explorer not always reflecting milestone unlocks and changed accessibility flags.
----------------------------------------------------------------------------------------------------------------------
Version: 0.6.4
Date: April 16th 2024
    Changes:
        - Tagged recipe-rows are now colored in the color of the tag.
        - Rows with errors are now more visible.
----------------------------------------------------------------------------------------------------------------------
Version: 0.6.3-RC2
Date: April 11th 2024
    Features: